set the right name

--- a/projects/pname/.htaccess
+++ b/projects/pname/.htaccess
@@ -2,8 +2,8 @@ DirectoryIndex index.php
 
 RewriteEngine on
 #This path must be set to the root of your website.
-#otherwise Silverrod doesnt finds your controller/model/param
-RewriteBase /SilverRod/projects/pname/
+#otherwise poem doesnt finds your controller/model/param
+RewriteBase /poem/projects/pname/
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond $1 !^(index\.php|robots\.txt)
